--- a/PersonalSmartCupAndroid/app/src/main/res/values/strings.xml
+++ b/PersonalSmartCupAndroid/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">PersonalSmartCup</string>
+    <string name="app_name">SmartCup</string>
+    <string name="app_name_chs">智能水杯</string>
     <string name="title_activity_login">登录账号</string>
 
     <!-- Strings related to login -->
