--- a/PersonalSmartCupAndroid/app/src/main/res/values/strings.xml
+++ b/PersonalSmartCupAndroid/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="passwordEditHint">密码</string>
     <string name="title_activity_history">HistoryActivity</string>
     <string name="title_activity_alarm">AlarmActivity</string>
+    <string name="title_activity_set_alarm">SetAlarmActivity</string>
 </resources>
