--- a/PersonalSmartCupAndroid/app/src/main/res/values/strings.xml
+++ b/PersonalSmartCupAndroid/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="title_activity_history">HistoryActivity</string>
     <string name="title_activity_alarm">AlarmActivity</string>
     <string name="title_activity_set_alarm">SetAlarmActivity</string>
+    <string name="title_activity_history2">History2Activity</string>
 </resources>
